--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
     <div id="threejs_canvas">
         <div id="overlay">
-            <p id="intro-text">Hoi zäme</p>
+            <p id="intro-text">HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI </p>
             <!-- <img id="logo" src="img/Logo.png"> -->
-            <div id="logo">About</div>
-            <div id="contact"><a href="mailto:hi@dionysschrag.com">Message me</a></div>
+            <!-- <div id="logo">About</div> -->
+            <!-- <div id="contact"><a href="mailto:hi@dionysschrag.com">Message me</a></div> -->
             <!-- <a href="mailto:hi@dionysschrag.com"><img id="contact" src="img/contact.png"></a> -->
-            <div id="scroll">
-                <div id="scroll-1"></div>
-                <div id="scroll-2"></div>
-            </div>
+            <!-- <div id="scroll"> -->
+                <!-- <div id="scroll-1"></div> -->
+                <!-- <div id="scroll-2"></div> -->
+            <!-- </div> -->
         </div>
     </div>  
 
 
-    <script src="js/main.js" type="module"></script>
+    <!-- <script src="js/main.js" type="module"></script> -->
 
     
 </body>
