--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="threejs_canvas">
         <div id="overlay">
-            <p id="intro-text">HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI HOI </p>
+            <p id="intro-text">HOI</p>
             <!-- <img id="logo" src="img/Logo.png"> -->
             <!-- <div id="logo">About</div> -->
             <!-- <div id="contact"><a href="mailto:hi@dionysschrag.com">Message me</a></div> -->
@@ -23,7 +23,7 @@
     </div>  
 
 
-    <!-- <script src="js/main.js" type="module"></script> -->
+    <script src="js/main.js" type="module"></script>
 
     
 </body>
