--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="threejs_canvas">
-        <div id="overlay">
-            <p id="intro-text">HOI</p>
+        <!-- <div id="overlay"> -->
+            <!-- <p id="intro-text">HOI</p> -->
             <!-- <img id="logo" src="img/Logo.png"> -->
             <!-- <div id="logo">About</div> -->
             <!-- <div id="contact"><a href="mailto:hi@dionysschrag.com">Message me</a></div> -->
@@ -19,7 +19,7 @@
                 <!-- <div id="scroll-1"></div> -->
                 <!-- <div id="scroll-2"></div> -->
             <!-- </div> -->
-        </div>
+        <!-- </div> -->
     </div>  
 
 
