--- a/index.html
+++ b/index.html
@@ -8,21 +8,7 @@
     <link rel="stylesheet" media="handheld" href="css/m_index.css">
 </head>
 <body>
-    <div id="threejs_canvas">
-        <!-- <div id="overlay"> -->
-            <!-- <p id="intro-text">HOI</p> -->
-            <!-- <img id="logo" src="img/Logo.png"> -->
-            <!-- <div id="logo">About</div> -->
-            <!-- <div id="contact"><a href="mailto:hi@dionysschrag.com">Message me</a></div> -->
-            <!-- <a href="mailto:hi@dionysschrag.com"><img id="contact" src="img/contact.png"></a> -->
-            <!-- <div id="scroll"> -->
-                <!-- <div id="scroll-1"></div> -->
-                <!-- <div id="scroll-2"></div> -->
-            <!-- </div> -->
-        <!-- </div> -->
-    </div>  
-
-
+    <div id="threejs_canvas"></div>  
     <script src="js/main.js" type="module"></script>
 
     
